<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scr="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.WelcomeFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="32dp"
            android:contentDescription="@string/welcome_logo"
            android:src="@drawable/ic_brain"
            scr:layout_constraintEnd_toEndOf="parent"
            scr:layout_constraintStart_toStartOf="parent"
            scr:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textSize="26sp"
            scr:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/game_rules"
            android:textSize="18sp"
            scr:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <Button
            android:id="@+id/btn_understand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/btn_understand"
            android:textSize="18sp"
            scr:cornerRadius="8sp"
            scr:layout_constraintBottom_toBottomOf="parent"
            scr:layout_constraintEnd_toEndOf="parent"
            scr:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>